# agent-scan

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  best_practices.md  pyproject.toml
.circleci/: config.yml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: tests.yml
docs/: README.md  discoverer-coverage-analysis.md  github-advanced-security.md  issue-codes.md  json-output.md  scanning.md
scripts/: generate_mcp_config_locations.py
src/agent_scan/: MCPScanner.py  __init__.py  agent_discovery.py  analyze.py  bootstrap.py  cli.py  consent.py  direct_scanner.py  guard.py  guard_launch.py  hook_common.py  hook_version.py  identity.py  inspect.py  mcp_client.py  mcp_server.py  mcp_shim.py  models.py  oauth.py  observe_preview.py  pipelines.py  printer.py  pushkeys.py  redact.py  run.py  runtime_config.py  sandbox.py  sarif.py  shim_installer.py  signed_binary.py  skill_client.py  snyk_mcp_stdio_local_proxy.cmd  snyk_mcp_stdio_local_proxy.sh  traffic_capture.py  upload.py  utils.py  verify_api.py  well_known_clients.py
src/agent_scan/agents/: __init__.py  base.py  claude_code.py  claude_desktop.py  codex.py  opencode.py
src/agent_scan/canary/: __init__.py  base.py  claude_code.py  vscode_family.py
src/agent_scan/hooks/: snyk-agent-guard.ps1  snyk-agent-guard.sh
src/mcp_scan/: Storage.py  cli.py  utils.py  well_known_clients.py
tests/: conftest.py
tests/canary_runner/: __init__.py  baseline.py  normalize.py  runner.py
tests/canary_runner/data/: inspect_sample_claude.json
tests/canary_test_supported_agents/: base.py  claude_code.py
tests/ci/: verify_cc_nightly_scan.py
tests/e2e/: test_full_scan_flow.py  test_guard_install.py  test_inspect.py  test_scan.py  test_shim_cache.py
tests/mcp_servers/.test-client-invalid/: mcp.json
tests/unit/: _secret_fixtures.py  test_agent_discovery.py  test_bootstrap.py  test_bootstrap_payload.py  test_canary.py  test_canary_contract.py  test_canary_covers_scopes.py  test_canary_runner.py  test_cli_bootstrap_wrapper.py  test_cli_control_server_no_consent.py  test_cli_evo_bootstrap_ordering.py  test_cli_interactivity.py  test_cli_logging.py  test_cli_parsing.py  test_config_scan.py  test_control_server.py  test_errors.py  test_guard.py  test_guard_launch.py  test_identity.py  test_inspect.py  test_inspect_tools.py  test_mcp_client.py  test_models.py  test_oauth.py  test_observe_preview.py  test_printer.py  test_pushkeys.py  test_redact.py  test_runtime_config.py  test_sandbox.py  test_sarif.py  test_shim_installer.py  test_shim_policy.py  test_signed_binary.py  test_skill_client.py  test_skills_glob.py  test_trusted_urls.py  test_upload.py  test_upload_correlation.py  (+4 more)
tests/v4compatibility/: test_inspect.py
(+24 files in other folders)
